--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
-body{
-    background-color: brown;
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header{
+    padding: 16px;
+    background-color: #182c61;
+    color: #ecf0f1;
+}
+header nav li{
+    font-size: 24px;
+    margin-left: 16px;
+    display: inline;
+}
+header nav li a{
+    color: #ecf0f1;
+    text-decoration: none;
+}
+.container{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
