--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@
 }
 
 header,
-section h2{
+section h2
+section h3
+form button{
     font-family: "Bungee", sans-serif;
+    font-weight: normal;
 }
 
-body{
+body, input, textarea {
     font-family: "Roboto Condensed", sans-serif; 
 }
 
@@ -40,10 +43,6 @@ section .container{
     align-items: center;
     justify-content: space-between;
 }
-header h1,
-section h2{
-    font-weight: normal;
-}
 
 
 .brands_list img{
@@ -70,6 +69,60 @@ section p{
 section{
     color: #182c61;
 }
+
 .store_front{
     margin-right: 32px;
+}
+.social-link li{
+    display: inline;
+    margin-right: 8px;
+}
+.social-link li a{
+    text-decoration: none;
+}
+.social-link img{
+    height: 24px;
+}
+
+#contact .container{
+    display: block;
+}
+.contact-method{
+    display: flex;
+    justify-content:space-between;
+}
+form input, 
+form textarea,
+form button{
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+form textarea{
+    resize: none;
+    height: 150px;
+}
+section h3{
+    margin-bottom: 8px;
+}
+form button{
+    background-color: #182c61;
+    color: #ecf0f1;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+form button:hover{
+    background-color: #7f9cec;
+}
+
+input:focus, textarea:focus{
+    outline-color: #182c61;
+}
+
+footer{
+    background-color: #182c61;
+    color: #ecf0f1;
+    padding:16px 0;
 }
